double scrollbar solved

--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body,html{
 	margin:0;
 	overflow-x: hidden;
 	font-family: 'Montserrat';
+	width:100vw;
 }
 
 		/* NAVBAR */
